--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* =========================================
-   1. GLOBAL VARIABLES & RESET
+   1. GLOBAL VARIABLES & RESET.
    ========================================= */
 :root {
     /* Brand Colors */
